# txt-editor

./: CMakeLists.txt  LICENSE  main.cpp
src/: binary_tree.h  draw.h
